# WealthPath

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-api.yml  deploy-frontend.yml  keepalive.yml
data/: scf_sample.csv
docs/: README.md  data-sources.md  overview.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  CohortCard.tsx  DriverBar.tsx  PlanForm.tsx  ResultsCard.tsx
frontend/src/data/: scenarios.ts
frontend/src/types/: api.ts
scripts/: generate_training_data.py  load_scf_data.py  seed_scf_sample.py  train_surrogate_model.py
src/wealthpath/: __init__.py  config.py  dependencies.py  main.py
src/wealthpath/agent/: llm_factory.py  planning_agent.py
src/wealthpath/agent/prompts/: explain_projection.yaml  goal_negotiation.yaml  loader.py
src/wealthpath/agent/tools/: cohort_tools.py  evaluate_tools.py  fred_mcp_server.py  fred_tools.py  projection_tools.py
src/wealthpath/api/routers/: chat.py  cohort.py  evaluate.py  health.py  projection.py
src/wealthpath/models/: chat.py  cohort.py  evaluate.py  household.py  projection.py
src/wealthpath/services/: ai_engine.py  scf_data_service.py  simulation_engine.py  surrogate_model_service.py
tests/: conftest.py  test_cohort_router.py  test_health.py  test_projection_router.py  test_scf_data_service.py  test_simulation_engine.py
